# docugen

./: README.md  pyproject.toml
.github/workflows/: tests.yml
src/docugen/: constants.py  directory_list.py  directory_tree.py  main.py  prompts.py  storage.py  summary.py
tests/: test_prompts.py  test_storage.py
